# nonebot-plugin-arcaea

./: .gitignore  .rcnb  LICENSE  MANIFEST.in  README.md  __init__.py  config.py  handler.py  main.py  matcher.py  pyproject.toml  setup.py
adapters/: estertion.py
api/: __init__.py  func.py
api/adapters/: estertion.py
api/estertion/: __init__.py  _call_api.py  call_api.py
commands/: __init__.py  b30.py  bind.py  help.py  info.py  recent.py
crud/: crud_user.py
db/: load_db.py
handlers/: __init__.py  auth.py  b30.py  bind.py  help.py  info.py  pre.py  recent.py
models/: __init__.py  argparser.py  command.py  user.py
nonebot_plugin_arcaea/: __init__.py  api_estertion.py  config.py  exceptions.py  functions.py  img_generator.py  main.py  matcher.py  store.db
nonebot_plugin_arcaea/api/: __init__.py  _base.py  exceptions.py  query.py  resolver.py  utils.py
nonebot_plugin_arcaea/api/estertion/: __init__.py  call_api.py
nonebot_plugin_arcaea/crud/: crud_user.py
nonebot_plugin_arcaea/db/: __init__.py  init_db.sql
nonebot_plugin_arcaea/handlers/: __init__.py  auth.py  b30.py  best.py  bind.py  config.py  help.py  info.py  recent.py  songinfo.py
nonebot_plugin_arcaea/messages/: __init__.py  main.py  text.py  text_utils.py
nonebot_plugin_arcaea/messages/themes/: _base.py  utils.py
nonebot_plugin_arcaea/models/: rule.py  user.py
nonebot_plugin_arcaea/schema/: __init__.py  basemodel.py  user.py
schema/: __init__.py  api.py  basemodel.py  user.py
schema/api/: _songinfo.py  songinfo.py  userbest30.py  userinfo.py
(+21 files in other folders)
