[project]
name = "nonebot_plugin_arcaea"
version = "0.2.0"
description = ""
authors = [
    {name = "iyume", email = "iyumelive@gmail.com"},
]
dependencies = [
    "nonebot2 @ git+https://github.com/nonebot/nonebot2.git",
    "httpx~=0.17",
    "pillow~=8.2",
]
requires-python = ">=3.7"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
