[project]
name = "nonebot-plugin-arcaea"
version = "0.2.0"
description = "An arcaea rhythm game score-querying bot plugin for nonebot2."
authors = [
    {name = "iyume", email = "iyumelive@gmail.com"},
]
dependencies = [
    "nonebot2~=2.0.0a9",
    "httpx~=0.17",
    "pillow~=8.2",
    "brotli~=1.0",
]
requires-python = ">=3.7"
dynamic = ["classifiers"]
license = {text = "MIT"}
readme = "README.md"
keywords = ["bot", "qq", "plugin", "onebot", "arcaea"]
packages = [
    { include = "nonebot_plugin_arcaea" },
]
include = ["nonebot_plugin_arcaea/db/init_db.sql"]

[project.urls]
homepage = "https://github.com/iyume/nonebot-plugin-arcaea"
repository = "https://github.com/iyume/nonebot-plugin-arcaea"
documentation = "https://github.com/iyume/nonebot-plugin-arcaea/blob/master/README.md"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
